# Learn

./: .gitignore  CMakeLists.txt  README.md
CUDA/: CMakeLists.txt  cuda_test.cu
GLEW/: CMakeLists.txt  glew_test.cpp
ITK/: CMakeLists.txt
ITK/HelloITK/: CMakeLists.txt  ImageRegistration1.cxx  main.cpp
Libs/assimp5.0.1/lib/: IrrXML.lib  IrrXMLd.lib  assimp-vc142-mt.lib  assimp-vc142-mtd.lib  zlibstatic.lib  zlibstaticd.lib
Libs/assimp5.0.1/lib/cmake/assimp-5.0/: assimpTargets-debug.cmake  assimpTargets-release.cmake
Libs/assimp5.0.1/lib/pkgconfig/: assimp.pc
Libs/glad3.3/include/glad/: glad.h
Open3D/: CMakeLists.txt  open3d_test.cpp
OpenCV/: CMakeLists.txt  aruco.cpp  main.cpp
OpenGL/: CMakeLists.txt
OpenGL/sample_1_7Camera/: CMakeLists.txt
OpenGL/sample_1_7Camera-2/: main.cpp
OpenGL/sample_1_7Camera/shaders/: shader.vs
OpenGL/sample_2_2Phong/: main.cpp
OpenGL/sample_2_2Phong-2/: main.cpp
OpenGL/sample_2_2Phong-2/shaders/: shader.fs  shader.vs
OpenGL/sample_2_3Material/: CMakeLists.txt  main.cpp
OpenGL/sample_2_3Material/shaders/: lightShader.fs  shader.fs
OpenGL/sample_3_2ModelClass/: main.cpp
OpenGL/sample_3_2ModelClass/shaders/: shader.fs
OpenGL/sample_4_11GeometryShader2/shaders/: shader.gs  skyboxShader.fs
OpenGL/sample_4_2MousePicking/: main.cpp
OpenGL/sample_4_4Stencil/: main.cpp
OpenGL/sample_4_4Stencil/shaders/: shader.fs
OpenGL/sample_4_8Skybox/: main.cpp
OpenGL/sample_4_8Skybox/shaders/: shader.vs  skyboxShader.vs
PCH/: CMakeLists.txt  main.cpp  pch.h
Qt-Open3D/: CMakeLists.txt  GLWidget.cpp  GLWidget.h  MainWidget.cpp  MainWidget.h  main.cpp
Qt-Open3D/ui/: GL3D.ui
Qt-VTK/: CMakeLists.txt  CutActorBoxWidget.cpp  CutActorBoxWidget.h  PlanAreaInteractorStyle.cpp  PlanAreaInteractorStyle.h  VtkUtillity.cpp  VtkUtillity.h  main.cpp  mainwindow.cpp  mainwindow.h  vtkBoxWidgetNT.cpp  vtkBoxWidgetNT.h
Qt-VTK/ui/: mainwindow.ui
Qt-imageView/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Qt-imageView/ui/: imageView.ui
Qt-test/: CMakeLists.txt  axbopenglwidget.cpp  axbopenglwidget.h  mainwindow.cpp
Qt-test/ui/: mainwindow.ui
VTK/: 3D2vtk.cpp  CMakeLists.txt  CustomVtkArrowActor.cpp  CustomVtkArrowActor.h  Pick.cpp  angle.cpp  boolean.cpp  main.cpp  open3d.cpp  vtkInteractorStyleRubberBandPick.cpp
code/: CMakeLists.txt  main.cpp
common/: camera.h  glad.c  mesh.h  model.h  stb_image.h
sample_1_7Camera/: main.cpp
sample_1_7Camera-2/: CMakeLists.txt  main.cpp
sample_1_7Camera/shaders/: shader.fs
sample_2_2Phong-2/: main.cpp
sample_3_2ModelClass/shaders/: shader.vs
sample_4_11GeometryShader2/: main.cpp
sample_4_11GeometryShader2/shaders/: skyboxShader.vs
sample_4_2MousePicking/: CMakeLists.txt
sample_4_3ModelControl/: CMakeLists.txt  main.cpp
sample_4_4Stencil/shaders/: shaderSingleColor.fs
sample_4_8Skybox/: main.cpp
