cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
project(Learn_OpenGL)

add_subdirectory(${CMAKE_SOURCE_DIR}/sample_1_7Camera)
add_subdirectory(${CMAKE_SOURCE_DIR}/sample_1_7Camera-2)
add_subdirectory(${CMAKE_SOURCE_DIR}/sample_2_2Phong)
add_subdirectory(${CMAKE_SOURCE_DIR}/sample_2_2Phong-2)
add_subdirectory(${CMAKE_SOURCE_DIR}/sample_2_3Material)